# mamba-nd

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
examples/: mnist.py
mamba_nd/: datamodules.py  model.py  networks.py
tests/: test_datamodule.py  test_networks.py
