[tool.poetry]
name = "mamba-nd"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mamba_nd"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
hydra-core = "^1.3.2"
lightning = "^2.2.0.post0"
omegaconf = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
